--- a/style.css
+++ b/style.css
@@ -2,28 +2,34 @@ body{
     display: flex;
     flex-direction: column;
     margin: 0;
+    flex:auto;
+
+    
 }
 
 button{
-    background-color: #3882f6;
+    background-color: green;
     border-radius: 5px;
     border: 0px;
     color:white;
-    padding: 8px 20px;
+    padding: 5px 18px;
     font-weight: 700;
+    cursor: pointer;
 }
 
 /* header section */
 
 .header{
     display: flex;
-    background-color: #1f2937;
+    background-color: #1f2337;
     justify-content: space-between;
     align-items: center;
+    padding: 0px 200px;
+    border-radius: 
 }
 
 .logo{
-    width: auto;
+    width: 80px;
     height: 80px;
     
 }
@@ -31,12 +37,15 @@ button{
 ul{
     list-style: none;
     display:flex;
-    gap: 20px;
+    gap: 30px;
+    
 }
 
 a{
+
     text-decoration: none;
-    color: white;
+    color: aqua;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 /* content section */
@@ -48,14 +57,42 @@ a{
 }
 
 .c1,.c2,.c3,.c4{
-    height: 300px;
+    height: 275px;
+    padding: 0px 200px;
+
 }
+
 
 .c1{
     background-color: #1f2937;
     display:flex;
     justify-content: space-between;
     align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+    gap: 50px;
+
+
+}
+
+.about{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+}
+
+.edc{
+    border-radius: 10px;
+}
+
+.about1{
+    font-size: 32px;
+    color: #f9faf8;
+}
+
+.about2{
+    font-size: 12px;
+    color:#e5e7eb;
 }
 
 .edc{
@@ -70,12 +107,133 @@ a{
     align-items: center;
 }
 
+.c1c2bck{
+    background-image: url(./images/bars.jpeg);
+    background-size: 115% auto;
+    background-repeat: no-repeat;
+    background-position: center;
+    flex: auto;
+}
+
+
+.info{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
+}
+
+
+.info1{
+    color: aqua;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 24px;
+    font-weight: 700;
+    
+}
+
+.info2{
+    color: aqua;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 10px;
+    font-weight: 700;
+}
+
+.artists{
+    display:flex;
+    gap: 20px;
+}
+
 .artist{
     height: 150px;
     width: auto;
     border-radius: 10px;
 }
 
+.artistname{
+    display: flex;
+    justify-content: center;
+    font-size: 24px;
+    color:aqua  ;
+    font-weight: 700;
+    
+}
+
 .c3{
+    display:flex;
+    justify-content: center;
+}
+
+.quotebanner{
     background-color: #e5e7eb;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 40px;
+    height: 250px;
+    width: auto;
+    padding: 0px 100px;
+
+}
+
+.quote{
+    font-style: italic;
+    color: #1f2937;
+    font-size: 36px;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+.author{
+    font-weight: 700;
+    display: flex;
+    justify-content: end;
+}
+
+.c4{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.banner{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #1f2937;
+    padding: 25px 50px;
+    border-radius: 10px;
+    gap: 30px;
+   
+}
+
+.btext{
+    display: flex;
+    flex-direction: column;
+    color: #e5e7eb;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.btext1{
+    font-size: 24px;
+}
+
+.btext2{
+    font-size: 16px;
+}
+
+/* footer */
+
+.footer{
+    background-color: #1f2937;
+    color: #e5e7eb;
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px
+
+    
 }
